--- a/app/src/main/res/layout/activity_browse.xml
+++ b/app/src/main/res/layout/activity_browse.xml
@@ -16,15 +16,18 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
-    <ImageButton
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageButton"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Browse Recipes"
+        android:id="@+id/textView2"
+        android:layout_alignTop="@+id/imageView3"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:src="@drawable/back"
-        android:scaleType="fitStart"
-        android:adjustViewBounds="false"
-        android:layout_alignBottom="@+id/imageView3" />
+        android:textSize="40dp"
+        android:layout_alignBottom="@+id/imageView3"
+        android:layout_toLeftOf="@+id/imageView3"
+        android:layout_toStartOf="@+id/imageView3" />
 
 </RelativeLayout>
