--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,8 +56,8 @@
         android:src="@drawable/fridgetitle"
         android:minHeight="100dp"
         android:minWidth="400dp"
-        android:layout_above="@+id/browse_button"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
