--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,8 @@
         android:id="@+id/imageView"
         android:src="@drawable/fridgebuddyicon"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:contentDescription="Picture of FridgeBuddy character" />
 
     <ImageView
         android:layout_width="wrap_content"
@@ -29,7 +30,7 @@
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageButton"
+        android:id="@+id/button_browse"
         android:src="@drawable/browse"
         android:cropToPadding="false"
         android:background="#ffe3b9ff"
@@ -37,23 +38,26 @@
         android:adjustViewBounds="true"
         android:layout_below="@+id/imageView5"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="44dp" />
+        android:layout_marginTop="44dp"
+        android:onClick="buttonOnClick"
+        android:focusable="false"
+        android:clickable="false" />
 
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageButton2"
+        android:id="@+id/button_search"
         android:src="@drawable/search_by_ingredient"
         android:scaleType="fitXY"
-        android:background="ffe3b9ff"
+        android:background="#ffe3b9ff"
         android:layout_centerVertical="true"
-        android:layout_alignLeft="@+id/imageButton"
-        android:layout_alignStart="@+id/imageButton" />
+        android:layout_alignLeft="@+id/button_browse"
+        android:layout_alignStart="@+id/button_browse" />
 
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageButton3"
+        android:id="@+id/button_aboutus"
         android:src="@drawable/about_us"
         android:scaleType="fitXY"
         android:background="#ffe3b9ff"
