--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -30,4 +30,11 @@
         android:layout_toLeftOf="@+id/imageView2"
         android:layout_toStartOf="@+id/imageView2" />
 
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/listView"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/imageView2" />
+
 </RelativeLayout>
