--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,22 +5,26 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".HelloWorldText"
     android:weightSum="1"
-    android:background="#ffe3b9ff">
+    android:background="@drawable/backgroundcolor">
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageView"
-        android:src="@drawable/fridgebuddyicon"
+        android:src="@drawable/fridgelogo"
+        android:contentDescription="Picture of FridgeBuddy character"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:contentDescription="Picture of FridgeBuddy character" />
+        android:layout_alignRight="@+id/button_aboutus"
+        android:layout_alignEnd="@+id/button_aboutus"
+        android:maxHeight="100dp"
+        android:maxWidth="50dp"
+        android:nestedScrollingEnabled="false" />
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageView5"
-        android:src="@drawable/fridgetitle"
+        android:src="@drawable/title"
         android:minHeight="100dp"
         android:minWidth="400dp"
         android:layout_alignParentTop="true"
@@ -31,38 +35,37 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/button_browse"
-        android:src="@drawable/browse"
+        android:src="@drawable/browsebybutton"
         android:cropToPadding="false"
         android:background="#ffe3b9ff"
         android:scaleType="fitXY"
         android:adjustViewBounds="true"
-        android:layout_below="@+id/imageView5"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="44dp"
         android:onClick="buttonOnClick"
         android:focusable="false"
-        android:clickable="false" />
+        android:clickable="false"
+        android:layout_above="@+id/button_search"
+        android:layout_alignLeft="@+id/button_search"
+        android:layout_alignStart="@+id/button_search" />
 
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/button_search"
-        android:src="@drawable/search_by_ingredient"
+        android:src="@drawable/ingredientbutton"
         android:scaleType="fitXY"
         android:background="#ffe3b9ff"
-        android:layout_centerVertical="true"
-        android:layout_alignLeft="@+id/button_browse"
-        android:layout_alignStart="@+id/button_browse" />
+        android:layout_above="@+id/button_aboutus"
+        android:layout_centerHorizontal="true" />
 
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/button_aboutus"
-        android:src="@drawable/about_us"
+        android:src="@drawable/aboutusbutton"
         android:scaleType="fitXY"
         android:background="#ffe3b9ff"
         android:adjustViewBounds="true"
-        android:layout_above="@+id/imageView"
+        android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
