--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -1,18 +1,35 @@
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/backgroundcolor">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:onClick="onListItemClick">
+    android:layout_height="wrap_content"
+    android:background="@drawable/backgroundcolor"
+    android:weightSum="1">
 
     <TextView
         android:id="@+id/Name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="#fff9f9f9"
+        android:textSize="30dp"
+        android:textIsSelectable="false"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="0.07"
+        android:background="#E3B9FF" />
+
+
     <TextView
         android:id="@+id/Recipe"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:textColor="#fff9f9f9"
+        android:textSize="18dp"
+        android:textIsSelectable="false" />
 
 
 
 </LinearLayout>
+</ScrollView>
